fix search bar spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -330,7 +330,7 @@ form.button_to {
 }
 
 .search-cards-grid {
-    grid-template-columns: auto min-content auto;
+    grid-template-columns: auto minmax(auto, 125pt) min-content minmax(auto, 125pt) auto;
     margin-bottom: 8pt;
 }
 
